# Team-H

./: .gitignore  CONTRIBUTING.md  INTEGRATION.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  package-lock.json  package.json  start-backend.sh  start-frontend.sh
.devcontainer/: Dockerfile  devcontainer.json
backend/: .report.json  README.md  main.py  pyproject.toml  requirements.txt
backend/agent/: __init__.py  react_agent.py
backend/backend/: __init__.py
backend/backend/agent/: __init__.py  react_agent.py
backend/backend/models/: agent_action.py  tool_schema.py
backend/backend/services/: openai.py
backend/backend/tools/: __init__.py  analysis_tools.py  example_tools.py  grading_tools.py
backend/models/: rubric_schema.py
backend/services/: openai.py
backend/tests/: test_agent.py  test_api.py  test_tools.py
backend/tools/: __init__.py  grading_tools.py  testing_tools.py
examples/comp301_adventure/301_adventure_repo/: metadata.yml
examples/comp301_adventure/301_adventure_rubric/: 301_adventure_rubric.json
examples/comp301_shopping/301_shopping_repo/: metadata.yml
examples/comp301_shopping/301_shopping_rubric.json/: 301_shopping_rubric_ai.json  301_shopping_rubric_gs.json
examples/student_example/: .report.json  rubric.json  student_submission.py  student_test.py  test_cases.json
frontend/: angular.json  package-lock.json  package.json  tsconfig.app.json
frontend/src/app/: app.html  app.ts
frontend/src/app/models/: rubric-item.ts
frontend/src/app/services/: agent.ts  agents.service.spec.ts
(+20 files in other folders)
